[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dipollcrod"
version = "0.1.0"
description = "A library solely for using polls in discordbot"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Rur1_jp" }
]
requires-python = ">=3.8"

dependencies = [
    "requests"
]

[tool.setuptools.packages.find]
where = ["."]
